# nagios-plugins-srm

./: AUTHORS  CMakeLists.txt  Makefile  README.md  build.sh  nagios-plugins-srm.spec  requirements.txt  setup.cfg
.github/workflows/: build.yml  build_rpm.yml  check-links.yml  lint.yml  python.yml  python3-nap-0.1.21-2.el9.noarch.rpm  release.yml
nagios_plugins_srm/: srm_probe.py
plugins/: CMakeLists.txt  gridutils.py  srm_probe.py
src/: gridutils.py  srm-probe.py
