[metadata]
name = nagios_plugins_srm 
summary = nagios plugins for SRM 
description-file = 
	README.md
author = Andrea Manzi
author-email = andrea.manzi@egi.eu
home-page = 
classifier = 
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Topic :: System :: Monitoring

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[files]
packages = 
	nagios_plugins_srm

[entry_points]
console_scripts = 
	nagios-plugins-srm = nagios_plugins_srm.srm_probe

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
